Gestion des session

--- a/public/views/login.jade
+++ b/public/views/login.jade
@@ -29,6 +29,6 @@ html(lang="fr")
 										input.form-control(placeholder="E-mail", name="email", type="text")
 									div.form-group
 										input.form-control(placeholder="Password", name="password", type="password", value="")
-										iinput.btn.btn-lg.btn-success.btn-block(type="submit", value="Register")
+										input.btn.btn-lg.btn-success.btn-block(type="submit", value="Register")
 		script(type="text/javascript", src="../js/jquery-1.10.2.js")
 		script(type="text/javascript", src="../js/bootstrap.js")
