Suppression du html inutile, correction du jade (affichage du login)

--- a/public/views/welcome.jade
+++ b/public/views/welcome.jade
@@ -7,6 +7,6 @@ html(lang="fr")
 	body
 		div.container
 			div.jumbotron
-				h1 Hello #{email}
+				h1 Hello #{_id}
 		script(type="text/javascript", src="../js/jquery-1.10.2.js")
 		script(type="text/javascript", src="../js/bootstrap.js")
